@@ -762,6 +762,7 @@ repl call, 0x578CD9,	0x585DF3,	0x578C49,	"Tile_check_water_for_navigator_cell_co
 inlead,	   0x49F5C0,	0x0,		0x0,		"PopupForm_impl_begin_showing_popup",		"int (__fastcall *) (PopupForm * this)"
 repl call, 0x49F5CB,	0x0,		0x0,		"is_online_game_for_show_popup",		""
 define,	   0x4EEC40,	0x0,		0x0,		"Animator_update",				"void (__fastcall *) (Animator * this)"
+inlead,	   0x5C32F0,	0x5D1F20,	0x5C3000,	"Unit_ai_can_sacrifice",			"bool (__fastcall *) (Unit * this, int edx, bool requires_city)"
 
 ignore,	   0x5FC710,	0x0,		0x0,		"PCX_Image_create_and_init_jgl_image",		"int (__fastcall *) (PCX_Image * this, int edx, int width, int height, int bit_depth, int param_4, int param_5, int param_6)"
 ignore,	   0x5FCC50,	0x0,		0x0,		"PCX_Image_draw_region_to_location",		"void (__fastcall *) (PCX_Image * this, int edx, PCX_Image * canvas, int src_x, int src_y, int dest_x, int dest_y, int width, int height)"
