@@ -266,6 +266,9 @@ ai_worker_requirement_percent = 150
 ; allowing infinite loops. This bug is rarely visible in-game, it usually appears as AI naval units following inappropriate or invalid paths.
 ;   ZERO PRODUCTION CRASH -- If a city has zero production, which is possible using specialists modded to produce negative shields, the game will
 ; crash due to a division by zero.
+;   AI CAN SACRIFICE WITHOUT SPECIAL ABILITY -- The base game function that gates the AI's ability to sacrifice units does not check whether the unit
+; in question has the sacrifice special ability set on its type. Thus, AIs are allowed to sacrifice any captured units as long as they have the
+; required tech. The mod fixes this by patching the gating function to insert the missing condition.
 
 patch_submarine_bug = true
 patch_science_age_bug = true
@@ -281,6 +284,7 @@ patch_division_by_zero_in_ai_alliance_eval = true
 patch_empty_army_movement = true
 patch_premature_truncation_of_found_paths = true
 patch_zero_production_crash = true
+patch_ai_can_sacrifice_without_special_ability = true
 
 ; At the beginning of each AI player's turn, deletes any units of theirs that are not on a valid tile. This addresses a rare crash that can occur when
 ; the unit AI invokes the pathfinder for an off-map unit. I don't know how AI units can end up off the map in the first place.
